# ctmp-sketch-decomposition

./: LICENSE  README.md
benchmarkings/lagriffoul/problems/pb_3_sorting_objects/meshes/: arena.stl  stick_red.dae  table.dae
benchmarkings/lagriffoul/problems/pb_3_sorting_objects/pddl_files/: pb_3_domain.pddl  pb_3_problem_def_1.pddl
benchmarkings/lagriffoul/scripts/: gazebo_world_from_problem_description.py
benchmarkings/lagriffoul/scripts/resources/: ending_part_gazebo_world.txt  initial_part_gazebo_world.txt
docker/: docker-compose.yaml
docker/.devcontainer/: devcontainer.json
docker/tamp-core/: Dockerfile  PreMoveitDockerfile
ros-tamp/: CMakeLists.txt  package.xml
ros-tamp/benchmarkings/lagriffoul/problems/pb_3_sorting_objects/gazebo_worlds/: pb_3_gazebo_world.xml
ros-tamp/benchmarkings/lagriffoul/problems/pb_3_sorting_objects/meshes/: stick_blue.ply  stick_blue.stl  table.stl
ros-tamp/benchmarkings/lagriffoul/problems/pb_3_sorting_objects/problem_definitions/: dummy_pb_3.xml  pb_3.xml  pb_3_1tab_20obj_2goal.xml
ros-tamp/benchmarkings/lagriffoul/problems/pb_4_non_monotonic/meshes/: arena.dae  split.dae  stick_green.dae  stick_red.dae
ros-tamp/benchmarkings/lagriffoul/problems/pb_4_non_monotonic/problem_definitions/: pb_4.xml
ros-tamp/benchmarkings/lagriffoul/scripts/classes/: problem_to_gazebo_translator.py
ros-tamp/benchmarkings/pb_blocks_world/meshes/: 10073_Gazebo_V2_L3.mtl  blocks-A.stl  blocks-B.stl  blocks-C.stl  blocks-D.stl  blocks-E.stl  blocks-F.stl  blocks-G.stl  blocks-H.stl  blocks-I.stl  blocks-J.stl  blocks-K.stl  blocks-L.stl  blocks-M.stl  blocks-N.stl  blocks-O.stl  blocks-P.stl  blocks-Q.stl  blocks-R.stl  blocks-S.stl  blocks-T.stl  blocks-U.stl  blocks-V.stl  blocks-W.stl  blocks-X.stl  blocks-Y.stl  cube_C.dae  cube_F.dae  cube_L.dae  cube_M.dae  cube_P.dae  cube_R.dae  cube_T.dae  cube_Z.dae  cube_Z.stl  stick_blue.dae  table.dae  table2.blend  table2.dae
ros-tamp/benchmarkings/pb_blocks_world/problem_definitions/: blocks_world.xml  pb_3_3tab_25obj_5goal.xml
ros-tamp/extra/: changes_to_tiago_repo.txt
ros-tamp/include/: action.hpp  action_move_base.hpp  action_pick.hpp  action_place.hpp  agent.hpp  brfs.hpp  cluttered_tamp_problem.hpp  domain.hpp  goal.hpp  hasher.hpp  horizontal_blocks_world_tamp_problem.hpp  iwk.hpp  move_base_action.hpp  moveit_tamp_action.hpp  moveit_tamp_problem.hpp  moveit_tamp_state.hpp  node.hpp  non_monotonic_tamp_problem.hpp  place_action.hpp  plan.hpp  problem.hpp  search.hpp  siwr.hpp  state.hpp  state_sampler.hpp  state_space.hpp  utils.hpp
ros-tamp/launch/: test_brfs.launch  test_tiago_problem_interface.launch  tiago.launch
ros-tamp/src/: agent.cpp  cluttered_tamp_problem.cpp  domain.cpp  horizontal_blocks_world_tamp_problem.cpp  main.cpp  moveit_tamp_problem.cpp  non_monotonic_tamp_problem.cpp  state_sampler.cpp  test_brfs.cpp  test_tiago_problem.cpp
tiago_config_files/: fake_controllers_pal-gripper_schunk-ft.yaml  tiago_pal-gripper_schunk-ft.srdf
